# arch-vox-backend

./: .env.example  .gitignore  AUDIT_LOGGING_QUICK_REFERENCE.md  Dockerfile  LICENSE  PHASE1_COMPLETE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_TESTING_GUIDE.md  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/auth/: verify.py
app/db/: helpers.py  neo4j.py  pool.py  postgres.py
app/features/: __init__.py
app/features/vip_onboarding/: README.md  __init__.py
app/infrastructure/audit/: __init__.py  audit_logger.py
app/infrastructure/observability/: logging.py
app/jobs/: data_cleanup_job.py  oauth_cleanup_job.py  token_refresh_job.py  vip_backfill_job.py  worker.py
app/middleware/: __init__.py  cors.py  https_enforcement.py  rate_limit_dependencies.py  rate_limit_headers.py  rate_limiter.py  request_context.py  security_headers.py
app/models/: user.py
app/models/api/: calendar_request.py  calendar_response.py  gmail_request.py  gmail_response.py  oauth_request.py  oauth_response.py  (+2 more)
app/repositories/: __init__.py  vip_repository.py
app/routes/: calendar.py  data_management.py  gmail.py  gmail_auth.py  health.py  onboarding.py  onboarding_vip.py  protected.py  voice.py
app/security/: __init__.py  hashing.py
app/services/: calendar_connection_service.py  calendar_operations_service.py  data_deletion_service.py  data_export_service.py  email_style_rate_limiter.py  email_style_service.py  email_style_usage_cache.py  encryption_service.py  gmail_auth_service.py  gmail_connection_service.py  gmail_operations_service.py  google_calendar_service.py  google_gmail_service.py  google_oauth_service.py  oauth_health_service.py  oauth_state_service.py  onboarding_service.py  openai_service.py  redis_client.py  redis_store.py  token_service.py  user_service.py  vip_backfill_scheduler.py  vip_backfill_service.py
app/static/: oauth_callback.html
app/utils/: __init__.py  audit_helpers.py
docker/: entrypoint.sh
docs/: jobs.md
migrations/: 001_create_audit_logs.sql  002_create_contact_identities.sql  003_add_contact_domain_shared_inbox.sql  004_add_vip_onboarding_state.sql  005_enable_audit_log_rls.sql  006_add_contact_quality_fields.sql  007_add_vip_backfill_retry_count.sql  README.md
tests/: conftest.py
tests/e2e/: test_full_user_journey.py
tests/integration/: test_calendar_operations.py  test_gmail_metadata_headers.py  test_gmail_oauth_flow.py  test_rate_limiting.py  test_webhook_verification.py
tests/unit/: test_connection.py  test_contact_recency_buckets.py  test_encryption.py  test_health.py  test_new_auth_code.py  test_onboarding_skip.py  test_vip_manual_flow.py  test_vip_scoring_quality.py  test_worker.py
(+56 files in other folders)
