[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-gmail-assistant"
version = "0.1.0"
description = "Voice-first Gmail assistant for hands-free email management"
requires-python = ">=3.11"
dependencies = [
    # Core FastAPI stack
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Database & Cache
    "psycopg[binary]>=3.1.0",  # Supabase/Postgres
    "redis>=5.0.4",
    
    # HTTP & Auth
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "pyjwt>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",  # Add this line
    
    # Google APIs
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.100.0",
    
    # Logging & Observability
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.26.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",  # For testing HTTP endpoints
    
    # Code Quality
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    
    # Development
    "pre-commit>=3.6.0",
]

[project.scripts]
voice-assistant = "app.main:main"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "psycopg.*",
]
ignore_missing_imports = true
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]